name: p2p
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Nick Van den Broeck
maintainer: example@example.com
homepage: https://github.com/githubuser/p2p#readme
synopsis: Short description of your package
description:
    Please see the README on Github at <https://github.com/githubuser/p2p#readme>
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/p2p

library
    exposed-modules:
        P2P
        Import
        P2P.OptParse
        P2P.StartServer
        P2P.AddNode
        P2P.SocketInfo
        P2P.JSONUtils
        P2P.Chan
    build-depends:
        base >=4.7 && <5,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        network >=2.6 && <2.7,
        aeson >=1.1 && <1.2,
        aeson-pretty >=0.8 && <0.9,
        stm >=2.4 && <2.5,
        bytestring >=0.10.8 && <0.11
    default-language: Haskell2010
    hs-source-dirs: src

executable p2p-exe
    main-is: Main.hs
    build-depends:
        base -any,
        p2p -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite p2p-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        p2p -any,
        hspec >=2.4 && <2.5
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
